--- a/React/EP-2 Project-Setup/index.html
+++ b/React/EP-2 Project-Setup/index.html
@@ -5,9 +5,27 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>react</title>
+<!--React cdn link-->
+    <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
+    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+<!--BABel cdn link -- used to understand the react code in  chrome-->
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <div id="root1"></div>
+    <App />     
+<!-- Imperative program -->
+     <script type="text/javascript">
+       let root=document.getElementById("root");
+       let h1=document.createElement('h1');
+       h1.innerText='Imperative program';
+       root.append(h1);
+     </script>
+<!-- Declarative program-->
+     <script type="text/jsx">
+      let root1=document.getElementById("root1");
+      ReactDOM.render( <h1>Declarative program</h1>,root1);
+     </script>
   </body>
 </html>
